<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/greeting_text"
        android:textAlignment="center"
        android:textSize="40sp"
        tools:text="Welcome to 3Dhelper" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginTop="30sp">

        <TextView
            android:id="@+id/question5"
            android:layout_width="match_parent"
            android:layout_height="506dp"
            android:gravity="center"
            android:text="@string/question_text5"
            android:textSize="30sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/question_text1"
            android:textSize="30sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/turn_over_button"
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/question_text2"
            android:textSize="30sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="507dp"
            android:gravity="center"
            android:text="@string/question_text3"
            android:textSize="30sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="505dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/answer_link5"
                android:layout_width="match_parent"
                android:layout_height="507dp"
                android:gravity="bottom"
                android:text="@string/link"
                android:textSize="30sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/answer21_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/answer21"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/answer22_image"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:src="@drawable/answer22"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/answer23_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/answer23"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/answer1_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/answer1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/answer1_text"
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:layout_marginTop="30sp"
                android:text="@string/answer1_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/answer_image3"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:src="@drawable/answer3"
                android:visibility="gone" />

            <TextView
                android:id="@+id/answer_text3"
                android:layout_width="match_parent"
                android:layout_height="193dp"
                android:layout_marginTop="20sp"
                android:text="@string/answer_text3"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_previous"
            android:layout_width="172dp"
            android:layout_height="88dp"
            android:layout_weight="1"
            android:src="@drawable/arrowleft" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="179dp"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:src="@drawable/arrowright" />
    </LinearLayout>

</LinearLayout>